--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
         </activity>
 
         <activity
+            android:name=".screens.sign_in.SignInActivity"
+            android:label="@string/title_activity_sign_in">
+        </activity>
+
+        <activity
             android:name=".screens.map.MapsActivity"
             android:label="@string/title_activity_maps">
         </activity>
