--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,21 @@
             android:name=".screens.map.MapsActivity"
             android:label="@string/title_activity_maps">
         </activity>
+
+        <activity
+            android:name=".screens.home.HomeActivity"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name=".screens.forgot_password.ForgotPasswordActivity"
+            android:label="@string/title_activity_forgot_password">
+        </activity>
+
+        <activity
+            android:name=".screens.health_services.FilterActivity"
+            android:label="@string/title_activity_filter">
+        </activity>
     </application>
 
 </manifest>
