--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,9 @@ dependencies {
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
