Update logos and auth item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/add" />
+            android:resource="@drawable/fav" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
